<resources>
    <string name="app_name">TaskerApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_questionnaires">QuestionnairesActivity</string>
    <string name="next">NEXT</string>
    <string name="never">never</string>
    <string name="infrequently">infrequently</string>
    <string name="sometimes">sometimes</string>
    <string name="frequently">frequently</string>
    <string name="always">always</string>
    <string name="number_of_questions">Total questions</string>
    <string name="total_points">Total points:</string>
    <string name="avg_points">average points</string>
    <string name="result_info">Result info</string>
    <string name="ok">OK</string>


    <string name="action_settings">Settings</string>
    <string name="task_description">Add a new Task</string>
    <string name="task_priority">Priority Task</string>
    <string name="task_date">Deadline</string>
    <string name="date_empty">Not Set</string>
    <string name="action_save">Save</string>
    <string name="action_reminder">Set Reminder</string>
    <string name="action_delete">Delete Task</string>
    <string name="ct_dsc_priority">Priority image</string>
    <string name="settings">Settings</string>
    <string name="pref_sortOrder_title">Sort by</string>
    <string name="pref_sortBy_title">Sort By:</string>
    <string name="pref_summary">Choose an order to sort your tasks.</string>
    <string name="pref_sortBy_default_label">Default</string>
    <string name="pref_sortBy_deadline_label">Deadline</string>
    <string name="reminder_title">Task Reminder</string>
    <string name="task_completed_failed">Task is not completed</string>
    <string name="task_completed">Task is completed</string>
    <string name="deleting_task_failed">Deleting task failed</string>
    <string name="deleting_task_successful">Task successfully deleted</string>

    <string name="pref_sortBy_key" translatable="false">sort</string>
    <string name="pref_sortBy_default" translatable="false">default</string>
    <string name="pref_sortBy_deadline" translatable="false">deadline</string>
</resources>
